welcome.lessons.welcome.array.has271.Has271.scala.error
has271:7: error: not found: value &&
			else if(nums(c+1) == nums(c) + 5) && nums(c+2) <= nums(c) - 2 && nums(c+2) >= nums(c) +2 {
                                                          ^